added images to tribute

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-/FrontEndProjects
 todo.txt
+/FrontEndProjects/Basic/01-Tribute/Images/original
+/FrontEndProjects/Basic/01-Tribute/practice.js
+/FrontEndProjects/Basic/01-Tribute/tribute.css
+/FrontEndProjects/Basic/01-Tribute/tribute.html
+
+
+/FrontEndProjects/Intermediate
+/FrontEndProjects/Advanced
+/FrontEndProjects/Basic/02-Portfolio
+
+
