modified:   .gitignore 	modified:   Algorithms/Basic/03-palindromes.js 	renamed:    Algorithms/Basic/04-longest_word.js -> Algorithms/Basic/04-longest_word_in_string.js 	modified:   Algorithms/Basic/05-title_case.js 	deleted:    Algorithms/Basic/06-largest_numbers.js 	new file:   Algorithms/Basic/06-largest_numbers_in_array.js 	modified:   Algorithms/Basic/07-confirm_ending.js 	modified:   Algorithms/Basic/08-repeat_string.js 	modified:   Algorithms/Basic/09-truncate_string.js 	modified:   Algorithms/Basic/10-chunky_monkey.js 	modified:   Algorithms/Basic/11-slasher_flick.js 	modified:   Algorithms/Basic/12-mutations.js 	modified:   Algorithms/Basic/13-falsy_bouncer.js 	modified:   Algorithms/Basic/14-seek_and_destroy.js 	modified:   Algorithms/Basic/15-where_do_i_belong.js 	modified:   Algorithms/Basic/16-caesars_cipher.js

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ todo.txt
 /FrontEndProjects/Basic/01-Tribute/tribute.css
 /FrontEndProjects/Basic/01-Tribute/tribute.html
 
-
+/Algorithms/Intermediate
 /FrontEndProjects/Intermediate
 /FrontEndProjects/Advanced
 /FrontEndProjects/Basic/02-Portfolio
