--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ todo.txt
 /FrontEndProjects/Basic/01-Tribute/tribute.html
 
 /Algorithms/Intermediate
+/FrontEndProjects/Intermediate/02-Weather/images/for_srcset
 /FrontEndProjects/Intermediate/01-QuoteGenerator
 /FrontEndProjects/Intermediate/03-WikipediaViewer
 /FrontEndProjects/Intermediate/04-Twitch
