--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ todo.txt
 
 /Algorithms/Intermediate
 /FrontEndProjects/Intermediate/02-Weather/images/for_srcset
+/FrontEndProjects/Intermediate/02-Weather/gps1.js
 /FrontEndProjects/Intermediate/01-QuoteGenerator
 /FrontEndProjects/Intermediate/03-WikipediaViewer
 /FrontEndProjects/Intermediate/04-Twitch
