Initial commit of surveyForm.   changed tributePage location. modified: .gitignore algorithms: removed to reformat - added to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,6 @@ todo.txt
 /FrontEndProjects/Advanced
 /FrontEndProjects/Basic/02-Portfolio
 
-
+/algorithms
+/projects/1.1_tributePage/images/original
+/projects/1.2_surveyForm/indextest.html
